scripts/nullness/annotator/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8.txt
../annotator/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/generator/AngularClient.java:11: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/generator/PHPObjectOriented.java:11: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/generator/JavaScriptClient.java:7: error: package com.uber.nullaway.annotations does not exist
import com.uber.nullaway.annotations.Initializer;
                                    ^
../annotator/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/generator/AngularClient.java:22: error: cannot find symbol
    @Initializer @Override
     ^
  symbol:   class Initializer
  location: class AngularClient
../annotator/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/generator/PHPObjectOriented.java:22: error: cannot find symbol
    @Initializer @Override
     ^
  symbol:   class Initializer
  location: class PHPObjectOriented
../annotator/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/generator/JavaScriptClient.java:18: error: cannot find symbol
    @Initializer @Override
     ^
  symbol:   class Initializer
  location: class JavaScriptClient
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
6 errors
